# snadra

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  start.sh  tox.ini
.github/workflows/: ci.yml
ci/: code_check.sh  run_tests.ps1  run_tests.sh  setup_environment.sh
docs/source/: .gitignore  conf.py  index.rst  snadra.core.rst
docs/source/autoapi/: index.rst
docs/source/autoapi/snadra/: index.rst
docs/source/autoapi/snadra/__main__/: index.rst
docs/source/autoapi/snadra/_core/: index.rst
docs/source/autoapi/snadra/_core/base/: index.rst
docs/source/autoapi/snadra/_core/parsers/: index.rst
docs/source/autoapi/snadra/_utils/: index.rst
docs/source/autoapi/snadra/commands/: index.rst
docs/source/autoapi/snadra/commands/exit/: index.rst
docs/source/autoapi/snadra/commands/help/: index.rst
docs/source/dev/: index.rst  install.rst  placeholder.rst  testing.rst
docs/source/reference/: index.rst  modules.rst  snadra.commands.rst  snadra.rst
docs/source/reference/_autosummary/: snadra.commands.exit.Command.rst  snadra.commands.exit.rst  snadra.commands.help.Command.rst  snadra.commands.help.rst  snadra.commands.rst  snadra.core.base.CommandDefinition.rst  snadra.core.base.Commands.rst  snadra.core.base.Complete.rst  snadra.core.base.Group.rst  snadra.core.base.Parameter.rst  snadra.core.base.rst  snadra.core.parsers.CommandParser.rst  snadra.core.parsers.rst  snadra.core.rst  snadra.rst
docs/source/user/: index.rst  placeholder.rst
requirements/: docs.txt  tests.txt
scripts/: build_docker_image  generate_requirements_file.py  run_docker_image
setup/: docker.sh  podman.sh
src/_snadra/: __init__.py  app.py  base.py  state.py  utils.py
src/_snadra/cmd/: __init__.py  base.py  config.py  console.py  parsers.py  utils.py
src/_snadra/cmd/commands/: __init__.py  exit.py  help.py  workspace.py
src/_snadra/config/: __init__.py  constants.py  default_config.toml  utils.py
src/_snadra/core/: parsers.py
src/_snadra/core/cmd/: __init__.py  utils.py
src/_snadra/core/cmd/commands/: exit.py  workspace.py
src/_snadra/core/commands/: __init__.py  help.py
src/_snadra/core/db/: utils.py
src/_snadra/db/: config.py  utils.py
src/_snadra/db/models/: __init__.py  workspace.py
src/snadra/: __init__.py  __main__.py  _typing.py  _utils.py  cmd.py  delete_me.py  main.py  snadra.py
src/snadra/_config/: __init__.py
src/snadra/_constants/: input.py
src/snadra/_core/: base.py  parsers.py
src/snadra/_core/commands/: __init__.py  creds.py  exit.py  help.py  workspace.py
src/snadra/_core/db/: base.py  utils.py
src/snadra/_core/db/models/: __init__.py  credential.py  workspace.py
src/snadra/commands/: __init__.py  _base.py  exit.py  help.py
src/snadra/core/: base.py  parsers.py
src/snadra/errors/: __init__.py
src/snadra/utils/: __init__.py
tests/: conftest.py  test_foo.py  test_version.py
tests/cmd/: conftest.py  test_base.py  test_parsers.py  test_utils.py
tests/cmd/commands/: test_exit.py
tests/commands/: conftest.py  test_commands.py  test_exit.py  test_init.py  test_parser.py
tests/core/: conftest.py  test_base.py  test_parsers.py
tests/core/commands/: test_exit.py
