[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py38', 'py39']
exclude = '''
(
	\.egg
	| \.git
	| \.mypy_cache
	| \.venv
	| build
	| dist
	| setup.py
)
'''

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
line_length = 88
profile = "black"
sections = [
	"FUTURE",
	"STDLIB",
	"THIRDPARTY",
	"FIRSTPARTY",
	"LOCALFOLDER",
]
src_paths = ["scripts", "src", "tests"]

[tool.pytest.ini_options]
doctest_optionflags = [
	"NORMALIZE_WHITESPACE",
	"IGNORE_EXCEPTION_DETAIL",
	"ELLIPSIS",
]
filterwarnings = [
	"error",
]
junit_family = "xunit2"
minversion = 6.0
python_files = "test_*.py"
testpaths = [
  "scripts",
  "tests",
]
xfail_strict = true
