[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = [
	"py38", 
	"py39"
]
exclude = '''
(
	\.egg
	| \.git
	| \.mypy_cache
	| \.venv
	| build
	| dist
	| setup.py
)
'''

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
line_length = 88
profile = "black"
sections = [
	"FUTURE",
	"STDLIB",
	"THIRDPARTY",
	"FIRSTPARTY",
	"LOCALFOLDER",
]
src_paths = ["scripts", "src", "tests"]

[tool.pytest.ini_options]
doctest_optionflags = [
	"NORMALIZE_WHITESPACE",
	"IGNORE_EXCEPTION_DETAIL",
	"ELLIPSIS",
]
filterwarnings = [
	"error",
]
junit_family = "xunit2"
minversion = 6.0
python_files = "test_*.py"
testpaths = [
  "scripts",
  "tests",
]
xfail_strict = true

[tool.mypy]
# Display
color_output = true
error_summary = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# Meta
incremental = true
show_traceback = true
warn_unused_configs = true

# Mode
show_none_errors = true
strict_optional = true
strict_equality = true
check_untyped_defs = true
ignore_missing_imports = true

# Allow
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_expr = false

# Deny
allow_redefinition = false
allow_untyped_globals = false
disallow_subclassing_any = true
disallow_untyped_decorators = true

# Warn
#warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

#disallow_any_decorated = true
#disallow_any_generics = true
#disallow_any_unimported = true
#disallow_incomplete_defs = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "_snadra",
    "snadra"
]
ignore_missing_imports = false