[bdist_wheel]
universal = 1

[flake8]
ignore = 
	E203,	# space before : (needed for how black formats slicing)
	W503,	# line break before binary operator
	W504,	# line break after binary operator
	E402	# module level import not at top of file
max-line-length = 88

[metadata]
description = Metasploit clone written in python.
long_description = file: README.rst
#long_description_content_type = text/x-rst
name = snadra
project_urls =
	Source = https://github.com/ShaharNaveh/snadra
	Tracker = https://github.com/ShaharNaveh/snadra/issues
version = attr: snadra.__version__
author = Shahar Naveh
classifier =
	Development Status :: 1 - Planning
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Software Development :: Libraries :: Python Modules
zip_safe = False

[mypy]
# Display
color_output = True
error_summary = True
pretty = True
show_column_numbers = True
show_error_codes = True
show_error_context = True

# Meta
incremental = True
show_traceback = True
warn_unused_configs = True

# Mode
show_none_errors = True
strict_optional = True
strict_equality = True

# Allow
disallow_any_decorated = False
disallow_any_explicit = False
disallow_any_expr = False

# Deny
allow_redefinition = False
allow_untyped_globals = False
check_untyped_defs = True
disallow_subclassing_any = True
disallow_untyped_decorators = True
ignore_missing_imports = True
warn_no_return = True
warn_redundant_casts = True
#warn_return_any = True
warn_unreachable = True
warn_unused_ignores = True

#disallow_any_decorated = True
#disallow_any_generics = True
#disallow_any_unimported = True
#disallow_incomplete_defs = True
#disallow_untyped_calls = True
#disallow_untyped_defs = True

[mypy-_snadra.*]
ignore_missing_imports = False

[mypy-snadra.*]
ignore_missing_imports = False

[options]
include_package_data = True
install_requires =
	SQLAlchemy>=1.4.0
	aiosqlite
	asyncpg
	prompt_toolkit>=3.0
	pygments
	rich
	rtoml
packages = find:
package_dir =
	= src
setup-requires = setuptools
python_requires = >=3.8, <4.0

#[options.entry_points]
#console_scripts =
#    snadra = snadra.__main__

[options.packages.find]
where = src
