[bdist_wheel]
universal = 1

[flake8]
ignore = 
	E203,	# space before : (needed for how black formats slicing)
	W503,	# line break before binary operator
	W504,	# line break after binary operator
	E402	# module level import not at top of file
max-line-length = 88

[metadata]
description = Metasploit clone written in python.
long_description = file: README.rst
#long_description_content_type = text/x-rst
name = snadra
project_urls =
	Source = https://github.com/ShaharNaveh/snadra
	Tracker = https://github.com/ShaharNaveh/snadra/issues
version = attr: snadra.__version__
author = Shahar Naveh
classifier =
	Development Status :: 1 - Planning
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Software Development :: Libraries :: Python Modules
zip_safe = False

[options]
include_package_data = True
install_requires =
	asyncpg
	prompt_toolkit>=3.0
	pygments
	rich
	rtoml
	SQLAlchemy>=1.4.0
packages = find:
package_dir =
	= src
setup-requires = setuptools
python_requires = >=3.8, <4.0

#[options.entry_points]
#console_scripts =
#    snadra = snadra.__main__

[options.packages.find]
where = src
